[project]
name = "project-operatorsoftheneuron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "causalnex>=0.12.1",
    "dowhy>=0.11.1",
    "gcastle>=1.0.3",
    "ipykernel>=6.29.5",
    "networkx>=3.4.2",
    "pywhy-graphs>=0.1.0",
]
